# Best-Hackathon

./: .gitignore  README.md  architecture_breakdown.md  implementation_plan.md  main.py  pyproject.toml  run_server.py  test_monitor.py  test_openai.py  test_verify.py  test_verify_active.py
edu/: PROMPT.md  __init__.py  agent.py  main.py  runner.py
exercise_inference/: PROMPT.md  agent.py  main.py  runner.py  tools.py
exercises/exercise1/: BUG_SHEET.md  EXERCISE.html
exercises/exercise2/: BUG_SHEET.md  EXERCISE.html
exercises/exercise3/: BUG_SHEET.html  EXERCISE.html
exercises/exercise_auth_1775937832/: BUG_SHEET.html  EXERCISE.html
exercises/exercise_backend_1775985984/: BUG_SHEET.html  EXERCISE.html
exercises/exercise_backend_1775989700/: BUG_SHEET.html  EXERCISE.html
exercises/exercise_backend_1775990941/: BUG_SHEET.html  EXERCISE.html
exercises/exercise_cybersecurity_1775991996/: BUG_SHEET.html  EXERCISE.html
src/: api.py  app.py
src/agents/: __init__.py  interface.py  openai_tutor.py
src/agents/prompts/: hint.py  system_prompt.py  verify.py
src/brook-plugin/: README.md  build.gradle.kts  gradle.properties
src/brook-plugin/gradle/: libs.versions.toml
src/brook-plugin/src/main/kotlin/org/pythons/brook/: BrookState.kt
src/brook-plugin/src/main/kotlin/org/pythons/brook/runner/: BrookApiClient.kt  FileModifier.kt  (+1 more)
src/brook-plugin/src/main/resources/: brook_plugin.py
src/domain/: __init__.py  models.py
src/services/: __init__.py  exercise.py  onboarding.py
src/tracker/: __init__.py  git_monitor.py
target_repo_TEST/: main.py
(+8 files in other folders)
