[project]
name = "best-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "langchain-tools>=0.1.34",
    "langgraph-prebuilt>=1.0.9",
    "openai>=2.31.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.44.0",
]
